Vou criar um branch para tentar novamente a footable

--- a/public/app/users/views/list-users.client.view.html
+++ b/public/app/users/views/list-users.client.view.html
@@ -87,7 +87,7 @@
                                     </div>
                                     <div class="col-sm-1" style="text-align:center;">
                                         <div class="media-body">
-                                            <i data-toggle="tooltip" data-placement="right" title="Remover produto"  ng-click="login(user)" class="fa fa-times clickable"></i>
+                                            <i data-toggle="tooltip" data-placement="right" title="Remover produto"  ng-click="teste(user)" class="fa fa-times clickable"></i>
                                         </div>
                                     </div>
                                 </div>
