--- a/public/app/users/views/view-user.client.view.html
+++ b/public/app/users/views/view-user.client.view.html
@@ -69,7 +69,7 @@
                 </table>
             </div>
             <div class="col-lg-3 m-b-lg">
-                <button ng-click="deleteAlert(user)" style="top: 5px; margin-right: 44px; position: relative;" class="btn btn-sm btn-white pull-right"><i class="fa fa-times"></i></button>
+                <button ng-click="teste()" style="top: 5px; margin-right: 44px; position: relative;" class="btn btn-sm btn-white pull-right"><i class="fa fa-times"></i></button>
                 <a ng-href="#!/users/{{ user._id }}/edit" style="top: 5px; margin-right: 10px; position: relative;" class="btn btn-sm btn-white pull-right"><i class="fa fa-pencil"></i></a>
             </div>
 
