--- a/public/app/caixas/views/edit-caixa.client.view.html
+++ b/public/app/caixas/views/edit-caixa.client.view.html
@@ -18,84 +18,68 @@
     </div>
     <div class="wrapper wrapper-content animated fadeInRight">
         <div class="row">
-            <div class="col-lg-12">
+            <div class="col-lg-7">
                 <div class="ibox float-e-margins">
                     <div class="ibox-title">
-                        <h5>Custom responsive table </h5>
+                        <h5>Conferência </h5>
 
                         <div ibox-tools></div>
                     </div>
                     <div class="ibox-content">
                         <div class="row">
-                            <div class="col-sm-5 m-b-xs"><select class="input-sm form-control input-s-sm inline">
-                                <option value="0">Option 1</option>
-                                <option value="1">Option 2</option>
-                                <option value="2">Option 3</option>
-                                <option value="3">Option 4</option>
-                            </select>
-                            </div>
-                            <div class="col-sm-4 m-b-xs">
+
+                            <div class="col-sm-6 m-b-xs">
                                 <div data-toggle="buttons" class="btn-group">
-                                    <label class="btn btn-sm btn-white"> <input type="radio" id="option1" name="options"> Day </label>
-                                    <label class="btn btn-sm btn-white active"> <input type="radio" id="option2" name="options"> Week </label>
-                                    <label class="btn btn-sm btn-white"> <input type="radio" id="option3" name="options"> Month </label>
+                                    <label class="btn btn-sm btn-white" ng-click="showTab.set('Despesas')"> Despesas </label>
+                                    <label class="btn btn-sm btn-white" ng-click="showTab.set('Cartões')"> Cartões </label>
+                                    <label class="btn btn-sm btn-white"> Despesas </label>
+                                    <label class="btn btn-sm btn-white"> Cartões </label>
                                 </div>
                             </div>
-                            <div class="col-sm-3">
+                            <div class="col-sm-6">
                                 <div class="input-group"><input type="text" placeholder="Search" class="input-sm form-control"> <span class="input-group-btn">
                                         <button type="button" class="btn btn-sm btn-primary"> Go!</button> </span></div>
                             </div>
                         </div>
                         <div class="table-responsive">
-                            <table class="table table-striped">
-                                <thead>
-                                <tr>
-
-                                    <th></th>
-                                    <th>Project</th>
-                                    <th>Completed</th>
-                                    <th>Task</th>
-                                    <th>Date</th>
-                                    <th>Action</th>
-                                </tr>
-                                </thead>
-                                <tbody>
-                                <tr>
-                                    <td><input icheck type="checkbox" ng-model="main.checkOne"></td>
-                                    <td>Project
-                                        <small>This is example of project</small>
-                                    </td>
-                                    <td><pie-chart data="main.PieChart4.data" options="main.PieChart4.options"></pie-chart></td>
-                                    <td>20%</td>
-                                    <td>Jul 14, 2013</td>
-                                    <td><a href=""><i class="fa fa-check text-navy"></i></a></td>
-                                </tr>
-                                <tr>
-                                    <td><input icheck type="checkbox" ng-model="main.unCheck1"></td>
-                                    <td>Alpha project</td>
-                                    <td><pie-chart data="main.PieChart3.data" options="main.PieChart3.options"></pie-chart></td>
-                                    <td>40%</td>
-                                    <td>Jul 16, 2013</td>
-                                    <td><a href=""><i class="fa fa-check text-navy"></i></a></td>
-                                </tr>
-                                <tr>
-                                    <td><input icheck type="checkbox" ng-model="main.unCheck2"></td>
-                                    <td>Betha project</td>
-                                    <td><pie-chart data="main.PieChart2.data" options="main.PieChart2.options"></pie-chart></td>
-                                    <td>75%</td>
-                                    <td>Jul 18, 2013</td>
-                                    <td><a href=""><i class="fa fa-check text-navy"></i></a></td>
-                                </tr>
-                                <tr>
-                                    <td><input icheck type="checkbox" ng-model="main.unCheck3"></td>
-                                    <td>Gamma project</td>
-                                    <td><pie-chart data="main.PieChart5.data" options="main.PieChart5.options"></pie-chart></td>
-                                    <td>18%</td>
-                                    <td>Jul 22, 2013</td>
-                                    <td><a href=""><i class="fa fa-check text-navy"></i></a></td>
-                                </tr>
-                                </tbody>
-                            </table>
+                            <div class="col-lg-12">
+                                <table class="table small table-striped" ng-hide="showTab.valor !== 'Despesas'">
+                                    <thead>
+                                    <tr>
+                                        <th>Checked</th>
+                                        <th>Descrição</th>
+                                        <th>Valor</th>
+                                        <th>Turno</th>
+                                    </tr>
+                                    </thead>
+                                    <tbody>
+                                    <tr data-ng-repeat="c in caixa.saidas.despesas | orderBy: 'checked'">
+                                        <td><input icheck type="checkbox" class="icheckbox_flat-blue" ng-model="c.checked"></td>
+                                        <td ng-class="c.checked ? 'text-strikethrough': ''">{{ c.descricao }}</td>
+                                        <td ng-class="c.checked ? 'text-strikethrough': ''">{{ c.valor | currency: 'R$ ' }}</td>
+                                        <td ng-class="c.checked ? 'text-strikethrough': ''">{{ c.turno }}</td>
+                                    </tr>
+                                    </tbody>
+                                </table> <!-- Despesas -->
+                                <table class="table small table-striped" ng-hide="showTab.valor !== 'Cartões'">
+                                    <thead>
+                                    <tr>
+                                        <th>Checked</th>
+                                        <th>Bandeira</th>
+                                        <th>Valor</th>
+                                        <th>Turno</th>
+                                    </tr>
+                                    </thead>
+                                    <tbody>
+                                    <tr data-ng-repeat="c in caixa.saidas.cartoes | orderBy: 'checked'">
+                                        <td><input icheck type="checkbox" class="icheckbox_flat-blue" ng-model="c.checked"></td>
+                                        <td ng-class="c.checked ? 'text-strikethrough': ''">{{ c.bandeira }}</td>
+                                        <td ng-class="c.checked ? 'text-strikethrough': ''">{{ c.valor | currency: 'R$ ' }}</td>
+                                        <td ng-class="c.checked ? 'text-strikethrough': ''">{{ c.turno }}</td>
+                                    </tr>
+                                    </tbody>
+                                </table>
+                            </div>
                         </div>
 
                     </div>
