--- a/public/app/users/views/create-user.client.view.html
+++ b/public/app/users/views/create-user.client.view.html
@@ -37,7 +37,7 @@
                             <div class="hr-line-dashed"></div>
                             <div class="form-group"><label class="col-sm-2 control-label">Senha</label>
                                 <div class="col-sm-7">
-                                    <input type="password" class="form-control" id="inputSenhaUsuario" name="senha" data-ng-model="senha" placeholder="Senha">
+                                    <input type="text" class="form-control" id="inputSenhaUsuario" name="senha" data-ng-model="senha" placeholder="Senha">
                                 </div>
                             </div>
                             <div class="hr-line-dashed"></div>
