várias mudanças de layout > edit caixas em andamento

--- a/public/app/caixas/views/edit-caixa.client.view.html
+++ b/public/app/caixas/views/edit-caixa.client.view.html
@@ -61,7 +61,7 @@
                                     </tr>
                                     </tbody>
                                 </table> <!-- Despesas -->
-                                <table class="table small table-striped" ng-hide="showTab.valor !== 'Cartões'">
+                                <table class="table small table-striped" ng-hide="showTab.valor === 'Cartões'">
                                     <thead>
                                     <tr>
                                         <th>Checked</th>
