--- a/public/app/caixas/views/edit/edit-caixa.client.view.html
+++ b/public/app/caixas/views/edit/edit-caixa.client.view.html
@@ -25,6 +25,9 @@
                 <div class="col-lg-4">
                     <ibox-conferencia-despesas></ibox-conferencia-despesas>
                 </div>
+                <div class="col-lg-4">
+                    <ibox-conferencia-cartoes></ibox-conferencia-cartoes>
+                </div>
             </div>
         </form>
     </div>
